# AutoTrader

./: .cproject  .gitignore  .project  AutoTrader.sln  Bugs  CMakeLists.txt  Notes  RearchPlan.txt  TestScript  Todo  build.sh  sequence_script.txt
AutoTrader/: AMACrossStratgy.cpp  AMACrossStratgy.h  AP_Mgr.cpp  AP_Mgr.h  AccountManger.cpp  AccountManger.h  AutoTrader.aps  AutoTrader.cpp  AutoTrader.vcxproj  AutoTrader.vcxproj.filters  BOLLTech.cpp  BOLLTech.h  BaseAccountMgr.cpp  BaseAccountMgr.h  CommonUtils.cpp  CommonUtils.h  DBWrapper.cpp  DBWrapper.h  EMACrossStratgy.cpp  EMACrossStratgy.h  IAccount.h  IPositionControl.h  InstrumentInfoMgr.h  K3AVEThoughK5AVE.cpp  K3AVEThoughK5AVE.h  KData.cpp  KData.h  MACrossBOLLStrategy.cpp  MACrossBOLLStrategy.h  MACrossBOLLTech.cpp  MACrossBOLLTech.h  MACrossStratgy.cpp  MACrossStratgy.h  Order.cpp  Order.h  OrderQueue.h  PositionControl.cpp  PositionMgr.cpp  PositionMgr.h  ReadMe.txt  (+34 more)
TraderViewer/: TraderViewer.sln
TraderViewer/TraderViewer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TraderViewer.csproj
TraderViewer/TraderViewer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
android_client/: .classpath  .project  AndroidManifest.xml  TraderClientKeyStore
android_client/Leakcanary-lib/: .project
android_client/Leakcanary-lib/src/: messages.properties
android_client/Leakcanary-lib/src/com/squareup/leakcanary/: AndroidExcludedRefs.java
android_client/Leakcanary-lib/src/org/eclipse/mat/: SnapshotException.java
android_client/Leakcanary-lib/src/org/eclipse/mat/collect/: ArrayInt.java  ArrayIntBig.java  ArrayIntCompressed.java  ArrayLong.java  ArrayLongCompressed.java  ArrayUtils.java  BitField.java  HashMapIntLong.java  HashMapIntObject.java  HashMapLongObject.java  IteratorInt.java  IteratorLong.java  PrimeFinder.java  QueueInt.java  SetInt.java
android_client/Leakcanary-lib/src/org/eclipse/mat/hprof/: AbstractParser.java  ArrayDescription.java  (+5 more)
android_client/res/layout/: activity4fragment_my.xml  activity_account.xml  activity_listview.xml  activity_login.xml  activity_welcome.xml  fragment_times.xml  trade_listview_item.xml
android_client/res/values/: color.xml  strings.xml
android_client/src/com/android/futures/: AccountActivity.java  LoginActivity.java  MyApp.java  MyFragmentActivity.java  TimesFragment.java  TradeListActivity.java  WelcomeActivity.java
android_client/src/com/android/futures/entity/: MATechInfo.java  MDEntity.java  TechType.java  TradeEntity.java
android_client/src/com/android/futures/tcp/: AccountInfo.java  AccountStatus.java  ClientSession.java  ClientSessionNew.java  ClientStatusListener.java  CommProtocol.java  PositionInfo.java  ReaderTask.java  SocketHandler.java  SocketStatusListener.java  TraderStatusListener.java  WriterTask.java
android_client/src/com/android/futures/util/: CircularMDQueue.java  DataCacheSetting.java  SubThreadException.java  VisualizationSetting.java
android_client/src/com/android/futures/view/: ListAdapter.java  QuickTimesView.java  TimesView.java
include/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiStruct.h
lib/: libmysql.lib
lib_json/: lib_json.vcxproj  lib_json.vcxproj.filters
src/: CMakeLists.txt
src/AutoTrader/: AMACrossStratgy.cpp  AMACrossStratgy.h  AP_Mgr.cpp  AP_Mgr.h  Account.cpp  Account.h  AccountMgr.cpp  AccountMgr.h  AccountPool.cpp  AccountPool.h  ActionProcessor.cpp  ActionProcessor.h  AutoTrader.cpp  AutoTrader.vcxproj  AutoTrader.vcxproj.filters  BOLLTech.cpp  BOLLTech.h  BaseClientSession.cpp  BaseClientSession.h  CMakeLists.txt  ClientSession.cpp  ClientSession.h  ClientSessionMgr.cpp  ClientSessionMgr.h  CommonUtils.h  ConfigV2.cpp  ConfigV2.h  DBWrapper.cpp  DBWrapper.h  EMACrossStratgy.cpp  EMACrossStratgy.h  IPositionControl.h  InstrumentInfoMgr.cpp  InstrumentInfoMgr.h  KData.cpp  KData.h  LoadStrategies.h  LoadStrategies.h~RF1b58500.TMP  LocalClientSession.cpp  LocalClientSession.h  (+68 more)
src/Common/: AccontMetaMgr.cpp  AccontMetaMgr.h  AccountMgr.cpp  AccountMgr.h  CMakeLists.txt  Common.h  Common.vcxproj  Common.vcxproj.filters  CommonUtils.cpp  CommonUtils.h  Config.cpp  Config.h  ConfigV2.cpp  ConfigV2.h  DBWrapper.cpp  DBWrapper.h  crossplatform.h  mysqlwrapper.cpp
src/MyStrategy/: AMACrossStratgy.cpp  AMACrossStratgy.h  CMakeLists.txt  EMACrossStratgy.cpp  EMACrossStratgy.h  MACrossBOLLStrategy.cpp  MACrossBOLLStrategy.h  MACrossBOLLTech.cpp  MACrossBOLLTech.h  MACrossStratgy.cpp  MACrossStratgy.h  MATech.cpp  MATech.h  MyStrategy.vcxproj  MyStrategy.vcxproj.filters  Pos20Precent.cpp  Pos20Precent.h  TechUtils.cpp  TechUtils.h  TechVec.h  WMACrossStratgy.cpp  WMACrossStratgy.h  mystrategy.cpp  mystrategy.h  stdafx.h
src/MyStrategy2/: BigProfitSmallLoseStrategy.cpp  BigProfitSmallLoseStrategy.h  CMakeLists.txt  Pos1Shou.cpp  Pos1Shou.h  TestCancelOrderStrategy.cpp  TestCancelOrderStrategy.h  TestCancelPosManage.cpp  TestCancelPosManage.h  mystrategy.cpp  mystrategy.h
src/StrategyFramework/: AMACrossStratgy.cpp  AMACrossStratgy.h  AP_Mgr.cpp  AP_Mgr.h  BOLLTech.cpp  BOLLTech.h  CMakeLists.txt  EMACrossStratgy.cpp  EMACrossStratgy.h  IPositionControl.h  InstrumentInfoMgr.cpp  InstrumentInfoMgr.h  KData.cpp  KData.h  MACrossBOLLStrategy.cpp  MACrossBOLLStrategy.h  MACrossBOLLTech.h  MACrossStratgy.cpp  MACrossStratgy.h  MATech.cpp  MATech.h  Order.cpp  Order.h  OrderTrigger.h  PPMgr.cpp  PPMgr.h  PositionControl.cpp  Strategy.h  StrategyFramework.vcxproj  StrategyFramework.vcxproj.filters  TechUtils.h  TechVec.h  TickWrapper.cpp  TickWrapper.h  TriggerFactory.cpp  TriggerFactory.h  WMACrossStratgy.cpp  WMACrossStratgy.h  stdafx.h
src/Utils/: CMakeLists.txt  UpdateInstruments.cpp  tradespi.cpp  tradespi.h
src/lib_json/: CMakeLists.txt  lib_json.vcxproj
src/ta-lib/: CMakeLists.txt
src/ta-lib/lib/x64/Debug/: ta-lib.lib
src/ta-lib/lib/x64/Release/: ta-lib.lib
src/ta-lib/src/: CMakeLists.txt
src/ta-lib/src/ta_func/: ta_AVGDEV.c  ta_IMI.c
visualization/: GenChart.py  get-pip.py  kchart.html
visualization/template/: templ.html
x64/Debug/: TradingDay.con
(+74 files in other folders)
